--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section>
         <div class ="stud">
-            <img class = "inf" src="C:\html, css\sdu homework\MIDTERM\img\0199_3.png" alt="">
+            <img class = "inf" src="img\0199_3.png" alt="">
             <h5 class = "who">Кто мы?</h5>
         </div>
 
@@ -52,40 +52,40 @@
 
     <section class="vod">
         <div class="log">
-            <img class= "jor" src="C:\html, css\sdu homework\MIDTERM\img\logo_glitch.png" alt="">
+            <img class= "jor" src="img\logo_glitch.png" alt="">
         </div>
 
         <div class="cont">
             <div class="galery-list">
                 <div class="galery-item">
-                    <img src="C:\html, css\sdu homework\MIDTERM\img\11.png" width="408" style="border: 1px solid black;" alt="">
+                    <img src="img\11.png" width="408" style="border: 1px solid black;" alt="">
                 </div>
                 <div class="galery-item">
-                    <img src="C:\html, css\sdu homework\MIDTERM\img\22.png" width="700" style="border: 1px solid black;" alt="">
+                    <img src="img\22.png" width="700" style="border: 1px solid black;" alt="">
                 </div>
                 <div class="galery-item">
-                    <img src="C:\html, css\sdu homework\MIDTERM\img\33.png" width="408" style="border: 1px solid black;" alt="">
+                    <img src="img\33.png" width="408" style="border: 1px solid black;" alt="">
                 </div>
                 <div class="galery-item">
-                    <img src="C:\html, css\sdu homework\MIDTERM\img\44.png" width="400" style="border: 1px solid black;" alt="">
+                    <img src="img\44.png" width="400" style="border: 1px solid black;" alt="">
                 </div>
                 <div class="galery-item">
-                    <img src="C:\html, css\sdu homework\MIDTERM\img\55.png" width="700" style="border: 1px solid black;" alt="">
+                    <img src="img\55.png" width="700" style="border: 1px solid black;" alt="">
                 </div>
                 <div class="galery-item">
-                    <img src="C:\html, css\sdu homework\MIDTERM\img\66.png" width="400" style="border: 1px solid black;" alt="">
+                    <img src="img\66.png" width="400" style="border: 1px solid black;" alt="">
                 </div>
                 <div class="galery-item">
-                    <img src="C:\html, css\sdu homework\MIDTERM\img\77.png" width="400" style="border: 1px solid black;" alt="">
+                    <img src="img\77.png" width="400" style="border: 1px solid black;" alt="">
                 </div>
                 <div class="galery-item">
-                    <img src="C:\html, css\sdu homework\MIDTERM\img\88.png" width="300" alt="">
+                    <img src="img\88.png" width="300" alt="">
                 </div>
                 <div class="galery-item">
-                    <img src="C:\html, css\sdu homework\MIDTERM\img\99.png" width="400" alt="">
+                    <img src="img\99.png" width="400" alt="">
                 </div>
                 <div class="galery-item">
-                    <img src="C:\html, css\sdu homework\MIDTERM\img\10.png" width="400" alt="">
+                    <img src="img\10.png" width="400" alt="">
                 </div>
             </div>        
         </div>
@@ -93,50 +93,50 @@
 
     <section>
         <div class="branding">
-            <img src="C:\html, css\sdu homework\MIDTERM\img\brand_glitch.png" style="width: 500px;" alt="">
+            <img src="img\brand_glitch.png" style="width: 500px;" alt="">
         </div>
 
         <div class="brand-list">
             <div class="brand-item">
-                <img src="C:\html, css\sdu homework\MIDTERM\img\y1.jpg" width =  "407" alt="">
+                <img src="img\y1.jpg" width =  "407" alt="">
             </div>
             <div class="brand-item">
-                <img src="C:\html, css\sdu homework\MIDTERM\img\y2.png" width = "700" alt="">
+                <img src="img\y2.png" width = "700" alt="">
             </div>
             <div class="brand-item">
-                <img src="C:\html, css\sdu homework\MIDTERM\img\y32.png" width="408" alt="">
+                <img src="img\y32.png" width="408" alt="">
             </div>
             <div class="brand-item">
-                <img src="C:\html, css\sdu homework\MIDTERM\img\y33.png" width="400" alt="">
+                <img src="img\y33.png" width="400" alt="">
             </div>
             <a href = "#zak" class="zakaza">
                 <h1 class="zav">ЗАКАЗАТЬ</h1>
             </a>
             <div class="brand-item">
-                <img src="C:\html, css\sdu homework\MIDTERM\img\y34.png" width="400" alt="">
+                <img src="img\y34.png" width="400" alt="">
             </div>
         </div>
     </section>
 
     <section>
         <div class="saits">
-            <img class = "os" src="C:\html, css\sdu homework\MIDTERM\img\_.png" alt="">
+            <img class = "os" src="img\_.png" alt="">
         </div>
         <div class="sait-list">
             <div class="sait-item1">
-                <img src="C:\html, css\sdu homework\MIDTERM\img\sai1.jpg" alt="">
+                <img src="img\sai1.jpg" alt="">
             </div>
             <div class="sait-item2">
-                <img src="C:\html, css\sdu homework\MIDTERM\img\sai2.jpg" alt="">
+                <img src="img\sai2.jpg" alt="">
             </div>
             <div class="sait-items" style="margin-right:51px;">
-                <img src="C:\html, css\sdu homework\MIDTERM\img\sai3.jpg" style="max-width:100%;" alt="">
+                <img src="img\sai3.jpg" style="max-width:100%;" alt="">
             </div>
             <div class="sait-items" style ="margin-right:25px;">
-                <img src="C:\html, css\sdu homework\MIDTERM\img\sai4.jpg" style="max-width: 100%;" alt="">
+                <img src="img\sai4.jpg" style="max-width: 100%;" alt="">
             </div>
             <div class="sait-items" >
-                <img src="C:\html, css\sdu homework\MIDTERM\img\sai5.jpg" style="max-width: 100%;" alt="">
+                <img src="img\sai5.jpg" style="max-width: 100%;" alt="">
             </div>
         </div>
     </section>
@@ -170,7 +170,7 @@
                 </div>
 
                 <div class="ris">
-                    <img src="C:\html, css\sdu homework\MIDTERM\img\kp.jpg" style = "width: 740px;"alt="">
+                    <img src="img\kp.jpg" style = "width: 740px;"alt="">
                 </div>
         </div>
     </section>
@@ -179,7 +179,7 @@
     <div class="fl">
         <div class="bu">
             <div class="ur">
-               <img src="C:\html, css\sdu homework\MIDTERM\img\_-1.png" width = "540" alt="">
+               <img src="img\_-1.png" width = "540" alt="">
             </div>
         </div>
             <div class="zae">
